--- a/oilfield.html
+++ b/oilfield.html
@@ -341,20 +341,20 @@
             <input type="radio" id="GasProcessing" name="categories" value="GasProcessing">
             <input type="radio" id="OilandGasPipeline" name="categories" value="OilandGasPipeline">
             <input type="radio" id="MaintenanceCleaning" name="categories" value="MaintenanceCleaning">
-            <ol class="filters">
-                <li>
+            <ol class="filters row">
+                <li class="col-sm-6 col-md-4 col">
                 <label for="All">All</label>
                 </li>
-                <li>
+                <li class="col-sm-6 col-md-4 col">
                 <label for="Petroleum">Petro Additives</label>
                 </li>
-                <li>
+                <li class="col-sm-6 col-md-4 col">
                 <label for="GasProcessing">Gas Processing</label>
                 </li>
-                <li>
+                <li class="col-sm-6 col-md-4 col">
                 <label for="OilandGasPipeline">Oil and Gas Pipeline</label>
                 </li>
-                <li>
+                <li class="col-sm-6 col-md-4 col">
                   <label for="MaintenanceCleaning">Maintenance & Cleaning</label>
                 </li>
               </ol>
