--- a/special.html
+++ b/special.html
@@ -345,23 +345,23 @@
               <input type="radio" id="Hydrocarbons" name="categories" value="Hydrocarbons">
               <input type="radio" id="Ink_Solvents" name="categories" value="Ink_Solvents">
           
-              <ol class="filters">
-                <li>
+              <ol class="filters row ">
+                <li class="col-sm-6 col-md-4 col">
                   <label for="All">All</label>
                 </li>
-                <li>
+                <li class="col-sm-6 col-md-4 col">
                   <label for="Alcohols">Alcohols</label>
                 </li>
-                <li>
+                <li class="col-sm-6 col-md-4 col">
                   <label for="Ketones">Ketones</label>
                 </li>
-                <li>
+                <li class="col-sm-6 col-md-4 col">
                   <label for="Esters">Esters</label>
                 </li>
-                <li>
+                <li class="col-sm-6 col-md-4 col">
                   <label for="Hydrocarbons">Hydrocarbons</label>
                 </li>
-                <li>
+                <li class="col-sm-6 col-md-4 col">
                   <label for="Ink_Solvents">Ink Solvents</label>
                 </li>
               </ol>
