--- a/industries-2.html
+++ b/industries-2.html
@@ -96,15 +96,15 @@
                                 <ul class="dropdown-menu">
                                     <li class="dropdown"><a class="dropdown-toggle"role="button" data-bs-toggle="dropdown" aria-expanded="false">Detergents</a>
                                         <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="#">Industrial Detergents</a></li>
+                                            <li><a class="dropdown-item" href="Industrialdetergents.html">Industrial Detergents</a></li>
                                             <li><a class="dropdown-item" href="industries-2.html">Household Detergents</a></li>
                                         </ul>    
                                     </li> 
-                                    <li><a class="nav-link" href="industries.html">Solvents</a>
+                                    <li><a class="nav-link" href="Solvents.html">Solvents</a>
                                     </li> 
-                                    <li><a href="#">Thinners</a></li> 
-                                    <li><a href="#">Special Detergents</a></li> 
-                                    <li><a href="#">Oilfield Chemicals</a></li> 
+                                    <li><a href="Thinners.html">Thinners</a></li> 
+                                    <li><a href="special.html">Special Detergents</a></li> 
+                                    <li><a href="oilfield.html">Oilfield Chemicals</a></li> 
                                 </ul>
                             </li>  
                             <li><a class="nav-link" href="about.html">About Us</a></li>  
@@ -158,7 +158,7 @@
     
     <!-- Fetures Area 2 --> 
     <section class="fetures_area fa_2">
-        <div class="container">
+        <div class="container p-5">
             <div class="row mb-5">
                 <h2 class="House mb-2">GSC Household Detergents</h2>
                 <p class="House">At GSC, we are committed to providing households with high-performance cleaning solutions that combine effectiveness with safety. Our household detergent range is designed to tackle everyday cleaning challenges, from dishwashing and surface disinfection to glass and hand cleaning. Each product is formulated with quality ingredients to ensure powerful results while being gentle on the surfaces and safe for your family.</p>
