--- a/oilfield.html
+++ b/oilfield.html
@@ -342,19 +342,19 @@
             <input type="radio" id="OilandGasPipeline" name="categories" value="OilandGasPipeline">
             <input type="radio" id="MaintenanceCleaning" name="categories" value="MaintenanceCleaning">
             <ol class="filters row">
-                <li class="col-sm-6 col-md-4 col">
+                <li class="col-sm-6 col-md-4 col-lg-2">
                 <label for="All">All</label>
                 </li>
-                <li class="col-sm-6 col-md-4 col">
+                <li class="col-sm-6 col-md-4 col-lg-2">
                 <label for="Petroleum">Petro Additives</label>
                 </li>
-                <li class="col-sm-6 col-md-4 col">
+                <li class="col-sm-6 col-md-4 col-lg-2">
                 <label for="GasProcessing">Gas Processing</label>
                 </li>
-                <li class="col-sm-6 col-md-4 col">
+                <li class="col-sm-6 col-md-4 col-lg-2">
                 <label for="OilandGasPipeline">Oil and Gas Pipeline</label>
                 </li>
-                <li class="col-sm-6 col-md-4 col">
+                <li class="col-sm-6 col-md-4 col-lg-2">
                   <label for="MaintenanceCleaning">Maintenance & Cleaning</label>
                 </li>
               </ol>
