--- a/special.html
+++ b/special.html
@@ -346,22 +346,22 @@
               <input type="radio" id="Ink_Solvents" name="categories" value="Ink_Solvents">
           
               <ol class="filters row ">
-                <li class="col-sm-6 col-md-4 col">
+                <li class="col-sm-6 col-md-4 col-lg-2">
                   <label for="All">All</label>
                 </li>
-                <li class="col-sm-6 col-md-4 col">
+                <li class="col-sm-6 col-md-4 col-lg-2">
                   <label for="Alcohols">Alcohols</label>
                 </li>
-                <li class="col-sm-6 col-md-4 col">
+                <li class="col-sm-6 col-md-4 col-lg-2">
                   <label for="Ketones">Ketones</label>
                 </li>
-                <li class="col-sm-6 col-md-4 col">
+                <li class="col-sm-6 col-md-4 col-lg-2">
                   <label for="Esters">Esters</label>
                 </li>
-                <li class="col-sm-6 col-md-4 col">
+                <li class="col-sm-6 col-md-4 col-lg-2">
                   <label for="Hydrocarbons">Hydrocarbons</label>
                 </li>
-                <li class="col-sm-6 col-md-4 col">
+                <li class="col-sm-6 col-md-4 col-lg-2">
                   <label for="Ink_Solvents">Ink Solvents</label>
                 </li>
               </ol>
