--- a/about.html
+++ b/about.html
@@ -157,7 +157,7 @@
     <!-- About Company Area -->  
     <section class="about_company_area">
             <div class="row ">
-                <div class="col-lg-6 p-0 d-flex justify-content-end align-items-start">
+                <div class="col-lg-6 p-0 d-flex justify-content-end align-items-center">
                     <div class="about_company w-75">
                         <h4>About Us</h4>
                         <h2 class="mb-5">Established in 2012, Global Specialty Chemicals (GSC) has become a leading supplier of industrial chemical solutions</h2>
