--- a/about.html
+++ b/about.html
@@ -162,7 +162,7 @@
                         <h4>About Us</h4>
                         <h2 class="mb-5">Established in 2012, Global Specialty Chemicals (GSC) has become a leading supplier of industrial chemical solutions</h2>
                         <p class="mb-5"> proudly serving a broad range of sectors in Egypt and across the region. Over the years, we have earned a reputation for delivering exceptional quality, reliability, and innovation in products such as detergents, oil & grease removers, solvents, thinners, oilfield chemicals, plastics, and printing solvents</p>
-                        <a href="/contact.html" class="theme_btn">Contact Us</a>
+                        <a href="contact.html" class="theme_btn">Contact Us</a>
                     </div>
                 </div>
                 <div class="col-lg-6 company_img">
