--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
                         <ul class="navbar-nav"> 
                             <li><a class="nav-link active" href="index.html">Home</a></li>  
                             <li class="dropdown">
-                                <a class="nav-link dropdown-toggle" href="" role="button" data-toggle="dropdown" aria-expanded="false">Products<i class="fa fa-caret-down"></i></a>
+                                <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="false">Products<i class="fa fa-caret-down"></i></a>
                                 <ul class="dropdown-menu">
                                     <li class="dropdown"><a class="dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Detergents</a>
                                         <ul class="dropdown-menu">
                                             <li><a class="dropdown-item" href="Industrialdetergents.html">Industrial Detergents</a></li>
-                                            <li><a class="dropdown-item" href="industries-2.html">Household Detergents</a></li>
+                                            <li><a class="dropdown-item" href="Household.html">Household Detergents</a></li>
                                         </ul>    
                                     </li> 
                                     <li><a class="nav-link" href="Solvents.html">Solvents</a>
@@ -133,7 +133,7 @@
                         style="z-index: 8; min-width: 780px; max-width: 780px; white-space: normal;">has been driving innovation in industrial chemical solutions, delivering unmatched quality and reliability.
                     </div> 
                     <!-- LAYER NR. 4 -->
-                    <a class="tp-caption theme_btn" href="industries-2.html"
+                    <a class="tp-caption theme_btn" href="Household.html"
                         id="slide-1-layer-4" 
                         data-x="['left','left','left','left']" 
                         data-hoffset="['0','0','0','15']" 
@@ -419,52 +419,52 @@
                 <div class="col-lg-4 col-md-6 wow fadeIn">
                     <div class="fetures">
                         <img  class="w-25" src="images/blue icons/a4.svg" alt="">
-                        <a href="industries-2.html" class="heding">Industrial Detergents</a>
+                        <a href="Industrialdetergents.html" class="heding">Industrial Detergents</a>
                         <p>Heavy-duty cleaning solutions for industrial environments, designed to remove grease and dirt from machinery and equipment.</p>
-                        <a href="industries-2.html">More Details <i class="fa fa-arrow-right"></i></a>
+                        <a href="Industrialdetergents.html">More Details <i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
                 <!-- Fetures -->
                 <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="0.3s">
                     <div class="fetures">
                         <img class="w-25" src="images/blue icons/a1.svg" alt="">
-                        <a href="industries-2.html" class="heding">Household Detergants</a>
+                        <a href="Household.html" class="heding">Household Detergants</a>
                         <p>Our eco-friendly detergents provide powerful, safe cleaning for every corner of your home, ensuring hygiene and protecting your family.</p>
-                        <a href="industries-2.html">More Details <i class="fa fa-arrow-right"></i></a>
+                        <a href="Household.html">More Details <i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
                 <!-- Fetures -->
                 <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="0.6s">
                     <div class="fetures">
                         <img class="w-25" src="images/blue icons/a2.svg" alt="">
-                        <a href="industries-single.html" class="heding">Solvents  </a>
+                        <a href="Solvents.html" class="heding">Solvents  </a>
                         <p>Our high-quality solvents are designed for dissolving, cleaning, and thinning in various industrial applications.</p>
-                        <a href="industries-single.html">More Details <i class="fa fa-arrow-right"></i></a>
+                        <a href="Solvents.html">More Details <i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
                 <!-- Fetures -->
                 <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="1.4s">
                     <div class="fetures">
                         <img class="w-30" src="images/blue icons/a3.svg" alt="">
-                        <a href="industries-single.html" class="heding">Thinners </a>
+                        <a href="Thinners.html" class="heding">Thinners </a>
                         <p>Formulated to reduce the viscosity of paints and coatings, our thinners ensure smooth application and consistent results.</p>
-                        <a href="industries-single.html">More Details <i class="fa fa-arrow-right"></i></a>
+                        <a href="Thinners.html">More Details <i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="0.9s">
                     <div class="fetures">
                         <img class="w-25" src="images/blue icons/a6.svg" alt="1.1s">
-                        <a href="industries-single.html" class="heding">Special Detergents</a>
+                        <a href="special.html" class="heding">Special Detergents</a>
                         <p>Tailor-made detergents designed to meet specific industrial cleaning needs, developed in collaboration with our clients.</p>
-                        <a href="industries-single.html">More Details <i class="fa fa-arrow-right"></i></a>
+                        <a href="special.html">More Details <i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="0.9s">
                     <div class="fetures">
                         <img class="w-25" src="images/blue icons/a5.svg" alt="">
-                        <a href="industries-single.html" class="heding">Oilfield chemicals</a>
+                        <a href="oilfield.html" class="heding">Oilfield chemicals</a>
                         <p>Specially formulated to enhance oil extraction and processing, ensuring safety, durability, and peak performance in tough environments.</p>
-                        <a href="industries-single.html">More Details <i class="fa fa-arrow-right"></i></a>
+                        <a href="oilfield.html">More Details <i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
 
@@ -534,10 +534,10 @@
         <div class="container"> 
             <div class="footer_inner row"> 
                 <div class="col-lg-4 col-md-6 footer_logo wow fadeIn">
-                    <a href="index.html"><img class="w-30" src="images/GSC.png" alt=""></a> 
+                    <a href="index.html"><img class="w-30" src="images/new12345.png" alt=""></a> 
                     <p>With over a decade of expertise, GSC ensures you always receive the best chemical solutions and industry guidance.</p>
                     <ul class="footer_social"> 
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://www.facebook.com/GSCEGY"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                         <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                         <li><a href="#"><i class="fa fa-tiktok"></i></a></li>
