--- a/contact.html
+++ b/contact.html
@@ -92,12 +92,12 @@
                         <ul class="navbar-nav"> 
                             <li><a class="nav-link active" href="index.html">Home</a></li>  
                             <li class="dropdown">
-                                <a class="nav-link dropdown-toggle" href="" role="button" data-toggle="dropdown" aria-expanded="false">Products<i class="fa fa-caret-down"></i></a>
+                                <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="false">Products<i class="fa fa-caret-down"></i></a>
                                 <ul class="dropdown-menu">
                                     <li class="dropdown"><a class="dropdown-toggle"role="button" data-bs-toggle="dropdown" aria-expanded="false">Detergents</a>
                                         <ul class="dropdown-menu">
                                             <li><a class="dropdown-item" href="Industrialdetergents.html">Industrial Detergents</a></li>
-                                            <li><a class="dropdown-item" href="industries-2.html">Household Detergents</a></li>
+                                            <li><a class="dropdown-item" href="Household.html">Household Detergents</a></li>
                                         </ul>    
                                     </li> 
                                     <li><a class="nav-link" href="Solvents.html">Solvents</a>
@@ -203,7 +203,7 @@
                     <a href="index.html"><img class="w-30" src="images/new12345.png" alt=""></a> 
                     <p>With over a decade of expertise, GSC ensures you always receive the best chemical solutions and industry guidance.</p>
                     <ul class="footer_social"> 
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://www.facebook.com/GSCEGY"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                         <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                         <li><a href="#"><i class="fa fa-tiktok"></i></a></li>
@@ -212,7 +212,7 @@
                 <div class="footer_widget col-lg-3 col-sm-6 wow fadeIn" data-wow-delay="0.3s">
                     <h4>GSC</h4>
                     <ul class="footer_nav">  
-                        <li><a href="#">Home</a></li> 
+                        <li><a href="index.html">Home</a></li> 
                         <li><a href="about.html">About Us</a></li> 
                         <li><a href="contact.html">Contact us</a></li> 
                     </ul>
@@ -221,7 +221,7 @@
                     <h4> Detergents</h4>  
                     <ul class="footer_nav">     
                         <li><a href="Industrialdetergents.html">Industrial Detergents</a></li>   
-                        <li><a href="industries-2.html">Household Detergents</a></li>   
+                        <li><a href="Household.html">Household Detergents</a></li>   
                     </ul>
                 </div>
                 <div class="footer_widget fw_2 col-lg-2 col-sm-6 wow fadeIn" data-wow-delay="0.6s">
