--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
                 <div class="footer_widget col-lg-3 col-sm-6 wow fadeIn" data-wow-delay="0.3s">
                     <h4>GSC</h4>
                     <ul class="footer_nav">  
-                        <li><a href="#">Home</a></li> 
+                        <li><a href="index.html">Home</a></li> 
                         <li><a href="about.html">About Us</a></li> 
                         <li><a href="contact.html">Contact us</a></li> 
                     </ul>
