--- a/Industrialdetergents.html
+++ b/Industrialdetergents.html
@@ -276,7 +276,7 @@
               <div class="col-lg-4 mail_info wow fadeInLeft">
                   <a ><i class="flaticon-mail"></i>info@globalchem-eg.com</a>
               </div> 
-              <a  class="col-lg-4 contact_no">(+20)223426311</a> 
+              <a href="" class="col-lg-4 contact_no">(+20)223426311</a> 
               <div class="col-lg-4 location_info wow fadeInRight"> 
                   <h4><i class="flaticon-placeholder"></i>4 El Frados Complex, Nasr City, Cairo, Egypt.</h4>
               </div>
