--- a/Industrialdetergents.html
+++ b/Industrialdetergents.html
@@ -274,7 +274,7 @@
       <div class="container">
           <div class="row">
               <div class="col-lg-4 mail_info wow fadeInLeft">
-                  <a ><i class="flaticon-mail"></i>info@globalchem-eg.com</a>
+                  <a href=""><i class="flaticon-mail"></i>info@globalchem-eg.com</a>
               </div> 
               <a href="" class="col-lg-4 contact_no">(+20)223426311</a> 
               <div class="col-lg-4 location_info wow fadeInRight"> 
