--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                         style="z-index: 8; min-width: 780px; max-width: 780px; white-space: normal;">from detergents to oil & grease removers, ensures that we meet the demands of industries across Egypt and the region.
                     </div> 
                     <!-- LAYER NR. 4 -->
-                    <a class="tp-caption theme_btn" href="industries-2.html"
+                    <a class="tp-caption theme_btn" href="Household.html"
                         id="slide-2-layer-4" 
                         data-x="['center','center','center','center']" 
                         data-hoffset="['-120','-120','-120','-120']" 
@@ -347,7 +347,7 @@
                         style="z-index: 8; min-width: 780px; max-width: 780px; white-space: normal;">we provide chemical solutions that enhance operational efficiency while protecting the environment.
                     </div> 
                     <!-- LAYER NR. 4 -->
-                    <a class="tp-caption theme_btn" href="industries-2.html"
+                    <a class="tp-caption theme_btn" href="Household.html"
                         id="slide-4-layer-4" 
                         data-x="['left','left','left','left']" 
                         data-hoffset="['0','0','0','15']" 
