--- a/special.html
+++ b/special.html
@@ -303,7 +303,7 @@
                                              <li><a class="dropdown-item" href="Household.html">Household Detergents</a></li>
                                          </ul>    
                                      </li> 
-                                     <li><a class="nav-link" href="industries.html">Solvents</a>
+                                     <li><a class="nav-link" href="Solvents.html">Solvents</a>
                                      </li> 
                                      <li><a href="Thinners.html">Thinners</a></li> 
                                      <li><a href="special.html">Special Detergents</a></li> 
