--- a/Household.html
+++ b/Household.html
@@ -21,6 +21,16 @@
     <![endif]-->
 </head>
 <body> 
+    <style>
+        @media(max-width:900px){
+            .features h3{
+                font-size: 1rem;
+            }
+            .fetures p{
+                font-size: 1rem;
+            }
+        }
+    </style>
 
     <!-- Header Top Area -->
     <!-- <div class="header_top_area"> 
@@ -162,7 +172,43 @@
             </div>
             <div class="row">
                 <!-- Fetures -->
-                <div class="col-lg-4 col-md-6 product wow fadeIn">
+                <div class="col-lg-4 col-md-6 Nove product wow fadeIn" data-wow-delay="0.3s">
+                    <div class="factories">
+                        <div class="factories_img pb-5">
+                            <img src="images//household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants8.jpg" alt="">
+                            <h3 class="heding">Nove Dishwashing Liquid</h3>
+                        </div>
+                        <div class="fetures">
+                            <h3 class="heding">Nove Dishwashing Liquid</h3>
+                            <p>Nove Dishwashing Liquid provides powerful grease-cutting action, leaving your dishes sparkling clean and residue-free. Its gentle formula is tough on stains but mild on hands, making it ideal for everyday use. With a fresh scent and long-lasting foam, Nove ensures a pleasant and effective dishwashing experience.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 Handy Liquid product wow fadeIn" data-wow-delay="0.6s">
+                    <div class="factories">
+                        <div class="factories_img pb-5">
+                            <img src="images//household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants7.jpg" alt="">
+                            <h3 class="heding">Handy Liquid Hand Soap</h3>
+                        </div>
+                        <div class="fetures">
+                            <h3 class="heding">Handy Liquid Hand Soap</h3>
+                            <p>Handy offers a gentle yet effective cleansing experience, leaving hands clean and moisturized with every use. Its easy-to-use pump dispenser provides convenient access, making it perfect for both home and office settings. Enjoy soft, refreshed hands with Handy’s rich, nourishing formula.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 glanso product wow fadeIn" data-wow-delay="0.9s">
+                    <div class="factories">
+                        <div class="factories_img pb-5">
+                            <img src="images/household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants3.jpg" alt="">
+                            <h3 href="#" class="heding">Glanso Glass & Window Cleaner</h3>
+                        </div>
+                        <div class="fetures">
+                            <h3 class="heding">Glanso Glass & Window Cleaner</h3>
+                            <p>Glanso delivers streak-free shine and clarity to your glass surfaces and windows. Its fast-acting formula effortlessly removes dust, fingerprints, and smudges, leaving your glass surfaces sparkling clean. Safe for regular use, Glanso is perfect for achieving a crystal-clear, polished finish on all glass and mirror surfaces.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 tornado product wow fadeIn">
                     <div class="factories">
                         <div class="factories_img pb-5 ">
                             <img class="w-100" src="images/3.jpg" alt="">
@@ -174,8 +220,45 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-lg-4 col-md-6 Madiera Oud product wow fadeIn" data-wow-delay="0.9s">
+                    <div class="factories">
+                        <div class="factories_img pb-5">
+                            <img src="images//household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants6.jpg" alt="">
+                            <h3 class="heding">Madiera Oud Air Freshener</h3>
+                        </div>
+                        <div class="fetures">
+                            <h3 class="heding">Madiera Oud Air Freshener</h3>
+                            <p>Madiera Oud Air Freshener brings the rich and luxurious scent of oud into your home, creating a warm and inviting atmosphere. Its long-lasting fragrance fills the room with a deep, woody aroma that elevates any space.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 Acacia Peach product wow fadeIn" data-wow-delay="0.9s">
+                    <div class="factories">
+                        <div class="factories_img pb-5">
+                            <img src="images//household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants9.jpg" alt="">
+                            <h3 class="heding">Madiera Peach Air Freshener</h3>
+                        </div>
+                        <div class="fetures">
+                            <h3 class="heding">Madiera Peach Air Freshener</h3>
+                            <p>Indulge in the sweet, juicy scent of ripe peaches with Madiera Peach Air Freshener. Its fruity fragrance instantly revitalizes your surroundings, leaving behind a refreshing and invigorating scent..</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 Acacia Cranberry product wow fadeIn" data-wow-delay="0.9s">
+                    <div class="factories">
+                        <div class="factories_img pb-5">
+                            <img src="images//household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants10.jpg" alt="">
+                            <h3 class="heding">Madiera Cranberry Air Freshener</h3>
+                        </div>
+                        <div class="fetures">
+                            <h3 class="heding">Madiera Cranberry Air Freshener</h3>
+                            <p>Enjoy the crisp and refreshing scent of cranberries with Madiera Cranberry Air Freshener. This fruity fragrance leaves a fresh, uplifting vibe, perfect for brightening up any room in your home or office.</p>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Fetures -->
-                <div class="col-lg-4 col-md-6 product wow fadeIn" data-wow-delay="0.3s"> 
+                <div class="col-lg-4 col-md-6 Glob product wow fadeIn" data-wow-delay="1.1s"> 
                     <div class="factories">
                         <div class="factories_img pb-5">
                             <img src="images/household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants1.jpg" alt="">
@@ -188,20 +271,8 @@
                     </div>
                 </div>
                 <!-- Fetures -->
-                <div class="col-lg-4 col-md-6 product wow fadeIn" data-wow-delay="0.6s">
-                    <div class="factories">
-                        <div class="factories_img pb-5">
-                            <img src="images/household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants3.jpg" alt="">
-                            <h3 href="#" class="heding">Glanso Glass & Window Cleaner</h3>
-                        </div>
-                        <div class="fetures">
-                            <h3 class="heding">Glanso Glass & Window Cleaner</h3>
-                            <p>Glanso delivers streak-free shine and clarity to your glass surfaces and windows. Its fast-acting formula effortlessly removes dust, fingerprints, and smudges, leaving your glass surfaces sparkling clean. Safe for regular use, Glanso is perfect for achieving a crystal-clear, polished finish on all glass and mirror surfaces.</p>
-                        </div>
-                    </div>
-                </div>
                 <!-- Fetures -->
-                <div class="col-lg-4 col-md-6 product wow fadeIn" data-wow-delay="1.4s">
+                <div class="col-lg-4 col-md-6 Gloptol product wow fadeIn" data-wow-delay="1.1s">
                     <div class="factories">
                         <div class="factories_img pb-5">
                             <img src="images/household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants4.jpg" alt="">
@@ -214,7 +285,7 @@
                     </div>
                 </div>
                 <!-- Fetures -->
-                <div class="col-lg-4 col-md-6 product wow fadeIn" data-wow-delay="1.1s">
+                <div class="col-lg-4 col-md-6 Madiera Flowers  product wow fadeIn" data-wow-delay="1.1s">
                     <div class="factories">
                         <div class="factories_img pb-5">
                             <img src="images/household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants5.jpg" alt="">
@@ -227,67 +298,7 @@
                     </div>
                 </div>
                 <!-- Fetures -->
-                <div class="col-lg-4 col-md-6 product wow fadeIn" data-wow-delay="0.9s">
-                    <div class="factories">
-                        <div class="factories_img pb-5">
-                            <img src="images//household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants6.jpg" alt="">
-                            <h3 class="heding">Madiera Oud Air Freshener</h3>
-                        </div>
-                        <div class="fetures">
-                            <h3 class="heding">Madiera Oud Air Freshener</h3>
-                            <p>Madiera Oud Air Freshener brings the rich and luxurious scent of oud into your home, creating a warm and inviting atmosphere. Its long-lasting fragrance fills the room with a deep, woody aroma that elevates any space.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 product wow fadeIn" data-wow-delay="0.9s">
-                    <div class="factories">
-                        <div class="factories_img pb-5">
-                            <img src="images//household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants7.jpg" alt="">
-                            <h3 class="heding">Handy Liquid Hand Soap</h3>
-                        </div>
-                        <div class="fetures">
-                            <h3 class="heding">Handy Liquid Hand Soap</h3>
-                            <p>Handy offers a gentle yet effective cleansing experience, leaving hands clean and moisturized with every use. Its easy-to-use pump dispenser provides convenient access, making it perfect for both home and office settings. Enjoy soft, refreshed hands with Handy’s rich, nourishing formula.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 product wow fadeIn" data-wow-delay="0.9s">
-                    <div class="factories">
-                        <div class="factories_img pb-5">
-                            <img src="images//household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants8.jpg" alt="">
-                            <h3 class="heding">Nove Dishwashing Liquid</h3>
-                        </div>
-                        <div class="fetures">
-                            <h3 class="heding">Nove Dishwashing Liquid</h3>
-                            <p>Nove Dishwashing Liquid provides powerful grease-cutting action, leaving your dishes sparkling clean and residue-free. Its gentle formula is tough on stains but mild on hands, making it ideal for everyday use. With a fresh scent and long-lasting foam, Nove ensures a pleasant and effective dishwashing experience.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 product wow fadeIn" data-wow-delay="0.9s">
-                    <div class="factories">
-                        <div class="factories_img pb-5">
-                            <img src="images//household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants9.jpg" alt="">
-                            <h3 class="heding">Acacia Peach Air Freshener</h3>
-                        </div>
-                        <div class="fetures">
-                            <h3 class="heding">Acacia Peach Air Freshener</h3>
-                            <p>Indulge in the sweet, juicy scent of ripe peaches with Acacia Peach Air Freshener. Its fruity fragrance instantly revitalizes your surroundings, leaving behind a refreshing and invigorating scent..</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 product wow fadeIn" data-wow-delay="0.9s">
-                    <div class="factories">
-                        <div class="factories_img pb-5">
-                            <img src="images//household detergants - المنظفات المنزليه-20241022T155747Z-001/household detergants - المنظفات المنزليه/household detergants10.jpg" alt="">
-                            <h3 class="heding">Acacia Cranberry Air Freshener</h3>
-                        </div>
-                        <div class="fetures">
-                            <h3 class="heding">Acacia Cranberry Air Freshener</h3>
-                            <p>Enjoy the crisp and refreshing scent of cranberries with Acacia Cranberry Air Freshener. This fruity fragrance leaves a fresh, uplifting vibe, perfect for brightening up any room in your home or office.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 product wow fadeIn" data-wow-delay="0.9s">
+                <div class="col-lg-4 col-md-6 product wow fadeIn" data-wow-delay="1.4s">
                     <div class="factories">
                         <div class="factories_img pb-5">
                             <img src="images/a.png" alt="">
@@ -299,7 +310,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 product wow fadeIn" data-wow-delay="0.9s">
+                <div class="col-lg-4 col-md-6 product wow fadeIn" data-wow-delay="1.4s">
                     <div class="factories">
                         <div class="factories_img pb-5">
                             <img src="images/a.png" alt="">
