--- a/Industrialdetergents.html
+++ b/Industrialdetergents.html
@@ -186,7 +186,7 @@
     <!-- Banner Area --> 
     <section class="banner_area">
         <div class="container">
-        <h2>Industrial detergents at GSC</h2>
+        <h2>Industrial Detergents </h2>
         </div>
     </section>  
     <!-- End Banner Area --> 
