--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
                             <h6 class="pt-0">info@globalchem-eg.com</h6>
                         </div>
                     </div>
-                    <ul class="header_social col-md-4 col-sm-6">
+                    <ul class="header_social mb-3 col-md-4 col-sm-6">
                         <li><a href="https://www.facebook.com/GSCEGY" target="_blank" title="Facebook Page"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                         <li><a href="#"><i class="fa fa-instagram"></i></a></li>
