--- a/special.html
+++ b/special.html
@@ -269,7 +269,7 @@
                             <h6 class="pt-0">info@globalchem-eg.com</h6>
                         </div>
                     </div>
-                    <ul class="header_social col-md-4 col-sm-6">
+                    <ul class="header_social col-md-4 mb-3 col-sm-6">
                         <li><a href="https://www.facebook.com/GSCEGY" target="_blank" title="Facebook Page"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                         <li><a href="#"><i class="fa fa-instagram"></i></a></li>
@@ -323,7 +323,7 @@
     <!-- Banner Area --> 
     <section class="banner_area">
         <div class="container">
-          <h2>Special Detergents at GSC</h2>
+          <h2>Special Detergents </h2>
         </div>
     </section>  
     <!-- End Banner Area --> 
