--- a/Industrialdetergents.html
+++ b/Industrialdetergents.html
@@ -291,6 +291,14 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-sm-12 col-md-6 col-lg-4  ">
+                        <div class="parenT px-3 py-5 rounded-4 border">
+                            <div class="header">
+                                <h2>Degrasol 1090 Series </h2>
+                                <p> is a powerful solvent-based degreaser with excellent cleaning and dissolving capacity, ideal for cleaning oil tanks, machines, engines, spare parts, and carriage floors.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="row mt-5">
                     <div class="col">
