--- a/Solvents.html
+++ b/Solvents.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="icon" href="images/GSC.png" type="image/x-icon" />
+    <link rel="icon" href="images/new12345.png" type="image/x-icon" />
     <!-- Theme tittle -->
     <title>GSC | Global For Specialty Chemicals </title> 
     
