--- a/index.html
+++ b/index.html
@@ -415,6 +415,11 @@
     <section class="fetures_area">
         <div class="container">
             <div class="row">
+                <div class="col">
+                    <h2 class="ourproduct position-relative pb-3 mb-3 text-center fw-bold ">OUR PRODUCT</h2>
+                </div>
+            </div>
+            <div class="row">
                 <!-- Fetures -->
                 <div class="col-lg-4 col-md-6 wow fadeIn">
                     <div class="fetures">
