--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <ul class="header_social col-md-4 mb-3 col-sm-6">
                         <li><a href="https://www.facebook.com/GSCEGY" target="_blank" title="Facebook Page"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="https://www.instagram.com/gscegy/"><i class="fa fa-instagram"></i></a></li>
                         <li><a href="#"><i class="fa fa-tiktok"></i></a></li>
                     </ul>
                 </div> 
@@ -58,7 +58,7 @@
                             <li class="dropdown">
                                 <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="false">Products<i class="fa fa-caret-down"></i></a>
                                 <ul class="dropdown-menu">
-                                    <li class="dropdown"><a class="dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Detergents</a>
+                                    <li class="dropdown"><a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Detergents </a>
                                         <ul class="dropdown-menu">
                                             <li><a class="dropdown-item" href="Industrialdetergents.html">Industrial Detergents</a></li>
                                             <li><a class="dropdown-item" href="Household.html">Household Detergents</a></li>
@@ -88,11 +88,11 @@
                 <!-- SLIDE 1 -->
                 <li data-index="rs-01" data-transition="slideoverup" data-slotamount="7"  data-easein="default" data-easeout="default" data-masterspeed="1000"  data-thumb="images/new8.jpg" data-title="Event Video">
                     <!-- MAIN IMAGE -->
-                    <img src="images/new8.jpg"  alt=""  data-lazyload="images/new8.jpg" data-bgposition="left center" data-kenburns="on" data-duration="30000" data-scalestart="110" data-scaleend="100" class="rev-slidebg" data-no-retina> 
+                    <img src="images/new8.jpg"  alt=""  data-lazyload="images/new8.jpg" data-bgposition="center center" data-kenburns="on" data-duration="30000" data-scalestart="110" data-scaleend="100" class="rev-slidebg" data-no-retina> 
                     <!-- LAYER NR. 1 -->   
                     <div class="tp-caption concept_title" 
                         id="slide-1-layer-1" 
-                        data-x="['left','left','left','left']" 
+                        data-x="['center','center','center','center']" 
                         data-hoffset="['0','0','0','0']" 
                         data-y="['top','top','top','top']" 
                         data-voffset="['285','250','150','150']" 
@@ -109,12 +109,12 @@
                         data-splitin="none" 
                         data-splitout="none" 
                         data-responsive_offset="on" 
-                        style="z-index: 7; white-space: nowrap; text-align:left;">Since 2014, Global Specialty Chemicals
+                        style="z-index: 7; white-space: nowrap; text-align:center;">Since 2014, Global Specialty Chemicals
                     </div>
-                     <div class="tp-caption slider_sm_heding" 
+                     <div class="tp-caption slider_sm_heding text-center" 
                         id="slide-1-layer-3" 
-                        data-x="['left','left','left','left']"  
-                        data-hoffset="['0','0','0','15']" 
+                        data-x="['center','center','center','center']"  
+                        data-hoffset="['0','0','0','0']" 
                         data-y="['top','top','top','top']" 
                         data-voffset="['370','330','200','180']"  
                         data-fontsize="['22','22','18','16',10']" 
@@ -132,29 +132,10 @@
                         data-responsive_offset="on"   
                         style="z-index: 8; min-width: 780px; max-width: 780px; white-space: normal;">has been driving innovation in industrial chemical solutions, delivering unmatched quality and reliability.
                     </div> 
-                    <!-- LAYER NR. 4 -->
-                    <a class="tp-caption theme_btn" href="Household.html"
-                        id="slide-1-layer-4" 
-                        data-x="['left','left','left','left']" 
-                        data-hoffset="['0','0','0','15']" 
-                        data-y="['bottom','bottom','bottom','bottom']" 
-                        data-voffset="['450','250','200','100']"  
-                        data-width="210" data-height="none" data-whitespace="nowrap" 
-                        data-transform_idle="o:1;" 
-                        data-transform_in="y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;s:1500;e:Power3.easeOut;" 
-                        data-transform_out="opacity:0;s:1000;s:1000;" 
-                        data-mask_in="x:0px;y:0px;s:inherit;e:inherit;" 
-                        data-start="2000" 
-                        data-splitin="none" 
-                        data-splitout="none" 
-                        data-responsive_offset="on" 
-                        style="z-index: 6; white-space: nowrap; text-align: center;">Our Products
-                    </a> 
-                    <!-- LAYER NR. 5 -->
                     <a class="tp-caption theme_btn industrial" href="contact.html"
                         id="slide-1-layer-5" 
-                        data-x="['left','left','left','left']"  
-                        data-hoffset="['240','240','240','240']" 
+                        data-x="['center','center','center','center']"  
+                        data-hoffset="['0','0','0','0']" 
                         data-y="['bottom','bottom','bottom','bottom']" 
                         data-voffset="['450','250','200','100']"  
                         data-width="210" data-height="none" data-whitespace="nowrap" 
@@ -193,7 +174,7 @@
                         data-splitin="none" 
                         data-splitout="none" 
                         data-responsive_offset="on" 
-                        style="z-index: 7; white-space: nowrap; text-align:left;">Our diverse range of 
+                        style="z-index: 7; white-space: nowrap; text-align:center;">Our diverse range of 
                     </div>
                     <!-- LAYER NR. 2 --> 
                     <div class="tp-caption concept_title" 
@@ -221,9 +202,9 @@
                      <div class="tp-caption slider_sm_heding text-center" 
                         id="slide-2-layer-3" 
                         data-x="['center','center','center','center']"  
-                        data-hoffset="['0','0','0','15']" 
+                        data-hoffset="['0','0','0','0']" 
                         data-y="['top','top','top','top']" 
-                        data-voffset="['450','450','260','230','230']"   
+                        data-voffset="['440','440','260','220','220']"   
                         data-fontsize="['22','22','18','16',10']" 
                         data-lineheight="['30','30','30','25']" 
                         data-width="['780','780','640','600','420','420']"
@@ -239,31 +220,12 @@
                         data-responsive_offset="on"   
                         style="z-index: 8; min-width: 780px; max-width: 780px; white-space: normal;">from detergents to oil & grease removers, ensures that we meet the demands of industries across Egypt and the region.
                     </div> 
-                    <!-- LAYER NR. 4 -->
-                    <a class="tp-caption theme_btn" href="Household.html"
-                        id="slide-2-layer-4" 
-                        data-x="['center','center','center','center']" 
-                        data-hoffset="['-120','-120','-120','-120']" 
-                        data-y="['bottom','bottom','bottom','bottom']" 
-                        data-voffset="['350','250','200','100']"  
-                        data-width="210" data-height="none" data-whitespace="nowrap" 
-                        data-transform_idle="o:1;" 
-                        data-transform_in="y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;s:1500;e:Power3.easeOut;" 
-                        data-transform_out="opacity:0;s:1000;s:1000;" 
-                        data-mask_in="x:0px;y:0px;s:inherit;e:inherit;" 
-                        data-start="2000" 
-                        data-splitin="none" 
-                        data-splitout="none" 
-                        data-responsive_offset="on" 
-                        style="z-index: 6; white-space: nowrap; text-align: center;">Our Products
-                    </a> 
-                    <!-- LAYER NR. 5 -->
                     <a class="tp-caption theme_btn industrial" href="contact.html"
                         id="slide-2-layer-5" 
                         data-x="['center','center','center','center']"  
-                        data-hoffset="['120','120','103','103']" 
+                        data-hoffset="['0','0','0','0']" 
                         data-y="['bottom','bottom','bottom','bottom']" 
-                        data-voffset="['350','250','200','100']"  
+                        data-voffset="['350','350','200','100']"  
                         data-width="210" data-height="none" data-whitespace="nowrap" 
                         data-transform_idle="o:1;" 
                         data-transform_in="y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;s:1500;e:Power3.easeOut;" 
@@ -283,7 +245,7 @@
                     <!-- LAYER NR. 1 -->   
                     <div class="tp-caption concept_title" 
                         id="slide-3-layer-1" 
-                        data-x="['left','left','left','left']" 
+                        data-x="['center','center','center','center']" 
                         data-hoffset="['0','0','0','15']" 
                         data-y="['top','top','top','top']" 
                         data-voffset="['285','250','150','150']" 
@@ -305,7 +267,7 @@
                     <!-- LAYER NR. 2 --> 
                     <div class="tp-caption concept_title" 
                         id="slide-3-layer-2" 
-                        data-x="['left','left','left','left']" 
+                        data-x="['center','center','center','center']" 
                         data-hoffset="['0','0','0','15']" 
                         data-y="['top','top','top','top']" 
                         data-voffset="['370','330','200','180']" 
@@ -322,12 +284,12 @@
                         data-splitin="none" 
                         data-splitout="none" 
                         data-responsive_offset="on" 
-                        style="z-index: 7; white-space: nowrap; text-align:left;">
+                        style="z-index: 7; white-space: nowrap; text-align:center;">
                     </div>
                     <!-- LAYER NR. 3 -->  
-                     <div class="tp-caption slider_sm_heding text-align-start text-left " 
+                     <div class="tp-caption slider_sm_heding  text-center " 
                         id="slide-3-layer-3" 
-                        data-x="['left','left','left','left']"  
+                        data-x="['center','center','center','center']"  
                         data-hoffset="['0','0','0','15']" 
                         data-y="['top','top','top','top']" 
                         data-voffset="['370','330','200','180','230']"   
@@ -346,31 +308,12 @@
                         data-responsive_offset="on"   
                         style="z-index: 8; min-width: 780px; max-width: 780px; white-space: normal;">we provide chemical solutions that enhance operational efficiency while protecting the environment.
                     </div> 
-                    <!-- LAYER NR. 4 -->
-                    <a class="tp-caption theme_btn" href="Household.html"
-                        id="slide-4-layer-4" 
-                        data-x="['left','left','left','left']" 
-                        data-hoffset="['0','0','0','15']" 
-                        data-y="['bottom','bottom','bottom','bottom']" 
-                        data-voffset="['400','250','200','100']"  
-                        data-width="210" data-height="none" data-whitespace="nowrap" 
-                        data-transform_idle="o:1;" 
-                        data-transform_in="y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;s:1500;e:Power3.easeOut;" 
-                        data-transform_out="opacity:0;s:1000;s:1000;" 
-                        data-mask_in="x:0px;y:0px;s:inherit;e:inherit;" 
-                        data-start="2000" 
-                        data-splitin="none" 
-                        data-splitout="none" 
-                        data-responsive_offset="on" 
-                        style="z-index: 6; white-space: nowrap; text-align: center;">Our Products
-                    </a> 
-                    <!-- LAYER NR. 5 -->
                     <a class="tp-caption theme_btn industrial" href="contact.html"
                         id="slide-5-layer-5" 
-                        data-x="['left','left','left','left']"  
-                        data-hoffset="['240','240','240','240']" 
+                        data-x="['center','center','center','center']"  
+                        data-hoffset="['0','0','0','0']" 
                         data-y="['bottom','bottom','bottom','bottom']" 
-                        data-voffset="['400','250','200','100']"  
+                        data-voffset="['450','350','200', '100']"  
                         data-width="210" data-height="none" data-whitespace="nowrap" 
                         data-transform_idle="o:1;" 
                         data-transform_in="y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;s:1500;e:Power3.easeOut;" 
@@ -401,7 +344,7 @@
                <div class="welcome_content"> 
                     <h2>Welcome to Global Specialty Chemicals – Leading Industrial Chemical Solutions</h2>
                     <p class="pt-3">Manufacturing has come a long way in just a few short years. We're helping businesses evolve and thrive in a changing world, where disruptive technologies and talent challenges are taking centre stage. Our industrial company delivers products and services to many countries of the globe, Our industrial company has been fulfilling public projects for decades, </p>
-                    <h4><i class="flaticon-factory"></i>Our Focus</h4>
+                    <h4><i class="flaticon-factory"></i>OUR FOCUS</h4>
                     <p class="factory_p pb-2">At Global Specialty Chemicals, we’re proud to support businesses with products that enhance operational efficiency and safety. We serve industries across Egypt and beyond, ensuring reliability and quality in every solution we provide.</p>
                     <h4><i class="flaticon-factory"></i>OUR MISSION</h4>
                     <p class="factory_p">We create value through sustainable and cutting-edge chemical solutions that empower businesses to grow and innovate. With a focus on excellence, our mission is to drive success and support industries in achieving their goals. </p>
@@ -544,7 +487,7 @@
                     <ul class="footer_social"> 
                         <li><a href="https://www.facebook.com/GSCEGY"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="https://www.instagram.com/gscegy/"><i class="fa fa-instagram"></i></a></li>
                         <li><a href="#"><i class="fa fa-tiktok"></i></a></li>
                     </ul>
                 </div>
@@ -613,5 +556,6 @@
     
     <!-- Theme js / Custom js -->
     <script src="js/theme.js"></script>
+
 </body>
 </html>
