--- a/Industrialdetergents.html
+++ b/Industrialdetergents.html
@@ -140,7 +140,7 @@
                     <ul class="header_social col-md-4 mb-3 col-sm-6">
                         <li><a href="https://www.facebook.com/GSCEGY" target="_blank" title="Facebook Page"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="https://www.instagram.com/gscegy/"><i class="fa fa-instagram"></i></a></li>
                         <li><a href="#"><i class="fa fa-tiktok"></i></a></li>
                     </ul>
                 </div> 
@@ -343,7 +343,7 @@
                     <ul class="footer_social"> 
                         <li><a href="https://www.facebook.com/GSCEGY"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="https://www.instagram.com/gscegy/"><i class="fa fa-instagram"></i></a></li>
                         <li><a href="#"><i class="fa fa-tiktok"></i></a></li>
                     </ul>
                 </div>
