--- a/Solvents.html
+++ b/Solvents.html
@@ -321,7 +321,7 @@ ol.filters{
                                      <li><a class="nav-link" href="Solvents.html">Solvents</a>
                                      </li> 
                                      <li><a href="Thinners.html">Thinners</a></li> 
-                                     <li><a href="special.html">Special Detergents</a></li> 
+                                     <li><a href="Customized Solutions.html">Customized Solutions</a></li> 
                                      <li><a href="oilfield.html">Oilfield Chemicals</a></li> 
                                  </ul>
                              </li>  
@@ -729,7 +729,7 @@ ol.filters{
                     <ul class="footer_nav"> 
                         <li><a href="Solvents.html">Solvents</a></li>   
                         <li><a href="Thinners.html">Thinners </a></li>   
-                        <li><a href="special.html">Special Detergents</a></li>   
+                        <li><a href="Customized Solutions.html">Customized Solutions</a></li>   
                         <li><a href="oilfield.html">Oilfield Chemicals</a></li>   
                     </ul>
                 </div> 
