--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
                                     <li><a class="nav-link" href="Solvents.html">Solvents</a>
                                     </li> 
                                     <li><a href="Thinners.html">Thinners</a></li> 
-                                    <li><a href="special.html">Special Detergents</a></li> 
+                                    <li><a href="Customized Solutions.html">Customized Solutions</a></li> 
                                     <li><a href="oilfield.html">Oilfield Chemicals</a></li> 
                                 </ul>
                             </li>  
@@ -273,7 +273,7 @@
                     <ul class="footer_nav"> 
                         <li><a href="Solvents.html">Solvents</a></li>   
                         <li><a href="Thinners.html">Thinners </a></li>   
-                        <li><a href="special.html">Special Detergents</a></li>   
+                        <li><a href="Customized Solutions.html">Customized Solutions</a></li>   
                         <li><a href="oilfield.html">Oilfield Chemicals</a></li>   
                     </ul>
                 </div> 
