--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                     <li><a class="nav-link" href="Solvents.html">Solvents</a>
                                     </li> 
                                     <li><a href="Thinners.html">Thinners</a></li> 
-                                    <li><a href="special.html">Special Detergents</a></li> 
+                                    <li><a href="Customized Solutions.html">Customized Solutions</a></li> 
                                     <li><a href="oilfield.html">Oilfield Chemicals</a></li> 
                                 </ul>
                             </li>  
@@ -410,9 +410,9 @@
                 <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="1.2s">
                     <div class="fetures">
                         <img class="w-25" src="images/blue icons/a6.svg" alt="1.5s">
-                        <a href="special.html" class="heding">Special Detergents</a>
+                        <a href="Customized Solutions.html" class="heding">Customized Solutions</a>
                         <p>Tailor-made detergents designed to meet specific industrial cleaning needs, developed in collaboration with our clients.</p>
-                        <a href="special.html">More Details <i class="fa fa-arrow-right"></i></a>
+                        <a href="Customized Solutions.html">More Details <i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
                 <!-- Fetures -->
@@ -510,7 +510,7 @@
                     <ul class="footer_nav"> 
                         <li><a href="Solvents.html">Solvents</a></li>   
                         <li><a href="Thinners.html">Thinners </a></li>   
-                        <li><a href="special.html">Special Detergents</a></li>   
+                        <li><a href="Customized Solutions.html">Customized Solutions</a></li>   
                         <li><a href="oilfield.html">Oilfield Chemicals</a></li>   
                     </ul>
                 </div> 
