--- a/oilfield.html
+++ b/oilfield.html
@@ -304,7 +304,7 @@
                                     <li><a class="nav-link" href="Solvents.html">Solvents</a>
                                     </li> 
                                     <li><a href="Thinners.html">Thinners</a></li> 
-                                    <li><a href="special.html">Special Detergents</a></li> 
+                                    <li><a href="Customized Solutions.html">Customized Solutions</a></li> 
                                     <li><a href="oilfield.html">Oilfield Chemicals</a></li> 
                                 </ul>
                             </li>  
@@ -571,7 +571,7 @@
                     <ul class="footer_nav"> 
                         <li><a href="Solvents.html">Solvents</a></li>   
                         <li><a href="Thinners.html">Thinners </a></li>   
-                        <li><a href="special.html">Special Detergents</a></li>   
+                        <li><a href="Customized Solutions.html">Customized Solutions</a></li>   
                         <li><a href="oilfield.html">Oilfield Chemicals</a></li>   
                     </ul>
                 </div> 
